# ebenya

./: Cargo.toml  ebenya.html  index.html  logs.txt  test.txt
pkg/: ebenya.d.ts  ebenya.js  ebenya_bg.wasm  ebenya_bg.wasm.d.ts  package.json
res/: box_1x1.gltf  electric.gltf  gun.gltf  test.gltf  toy_car.gltf
src/: camera.rs  instance.rs  lib.rs  main.rs  model.rs  shader.wgsl  texture.rs
src/log/: mod.rs  writer.rs
src/render/: mod.rs
src/render/pipelines/: common.rs  mod.rs  primitive.rs  primitive.wgsl
src/vmath/: lookAt.rs  matrix.rs  matrix4x4.rs  mod.rs  vector.rs
wgpu_graph/: desc.txt
