[package]
name = "ebenya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#wasm-pack build --target web

[dependencies]
winit = "0.26.1"
env_logger = "0.9"
log = "0.4.14"
wgpu = "0.13.1"
cfg-if = "1"
pollster = "0.2"
bytemuck = {version = "1.4", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
instant = "0.1.12"
tobj = { version = "3.2.1", features = [
    "async",
]}
 

# math lib
num = "0.4.0"
#nalgebra = "0.31"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.13.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
 

[lib]
crate-type = ["cdylib", "rlib"]
